@@ -1514,7 +1514,7 @@ def box(on=None):
     draw_if_interactive()
 
 ### The following functions were autogenerated by the boilerplate.py
-### script.  They are simple wrappers around the Axes methods of the
+### script.  They are simple wrappers around Axes methods.
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
@@ -2274,6 +2274,27 @@ Addition kwargs: hold = [True|False] overrides default hold state"""
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+def quiver2(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().quiver2(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+    gci._current = ret
+    hold(b)
+    return ret
+if Axes.quiver2.__doc__ is not None:
+    quiver2.__doc__ = _shift_string(Axes.quiver2.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def cla(*args, **kwargs):
 
     ret =  gca().cla(*args, **kwargs)
@@ -2502,5 +2523,6 @@ def winter():
     if im is not None:
         im.set_cmap(cm.winter)
     draw_if_interactive()
+
 
 
